[gd_scene load_steps=32 format=2]

[ext_resource path="res://Scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://ASSETS/Images/4x/player-normal.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/Images/4x/king-normal.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/Images/4x/chat-box.png" type="Texture" id=4]
[ext_resource path="res://ASSETS/Fonts/new_dynamicfont small.tres" type="DynamicFont" id=5]
[ext_resource path="res://ASSETS/Fonts/for chat mssages.tres" type="DynamicFont" id=6]
[ext_resource path="res://ASSETS/Images/4x/life-count2.png" type="Texture" id=7]
[ext_resource path="res://ASSETS/Fonts/PixelifySans-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://ASSETS/Fonts/for chat names.tres" type="DynamicFont" id=9]
[ext_resource path="res://ASSETS/Images/panel-transparent-border-015.png" type="Texture" id=10]
[ext_resource path="res://ASSETS/Images/panel-transparent-border-013.png" type="Texture" id=11]
[ext_resource path="res://ASSETS/Images/panel-transparent-border-012.png" type="Texture" id=12]
[ext_resource path="res://ASSETS/Sounds/bg game play.wav" type="AudioStream" id=13]
[ext_resource path="res://ASSETS/Sounds/end.wav" type="AudioStream" id=14]
[ext_resource path="res://ASSETS/Sounds/KING SMILE.MP3" type="AudioStream" id=15]
[ext_resource path="res://ASSETS/Sounds/king dislick.MP3" type="AudioStream" id=16]
[ext_resource path="res://ASSETS/Fonts/PixelifySans-Regular.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://ASSETS/Sounds/start buton.wav" type="AudioStream" id=18]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=8]
resource_name = "Loading"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "Loading .", "Loading ..", "Loading ..." ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Loading ." ]
}

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="Theme" id=7]

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 48, 48 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 48, 48 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 48, 48 )

[sub_resource type="DynamicFont" id=10]
size = 25
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=14]
size = 60
font_data = ExtResource( 17 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 48, 48 )

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 48, 48 )
margin_left = 6.0
margin_right = 3.0
margin_top = 8.0
margin_bottom = 8.0

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1020.0
margin_bottom = 600.0
color = Color( 0.701961, 0.682353, 0.682353, 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = -8.0
margin_right = 1029.0
margin_bottom = 592.0

[node name="Kings Dialouge" type="PopupDialog" parent="Control"]
visible = true
margin_left = 166.0
margin_top = 97.0
margin_right = 446.0
margin_bottom = 247.0
rect_scale = Vector2( 1, 0.978246 )
custom_styles/panel = SubResource( 1 )

[node name="chatbox" type="Sprite" parent="Control/Kings Dialouge"]
position = Vector2( 199.5, 94.6463 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
flip_h = true

[node name="Name" type="RichTextLabel" parent="Control/Kings Dialouge"]
margin_left = 25.0
margin_top = 45.911
margin_right = 259.0
margin_bottom = 104.911
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = ExtResource( 9 )
text = "KING :"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Kings Dialouge"]
root_node = NodePath("Message")
anims/Loading = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="Message" type="RichTextLabel" parent="Control/Kings Dialouge/AnimationPlayer"]
margin_left = 203.0
margin_top = 174.216
margin_right = 560.0
margin_bottom = 232.216
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 6 )
text = "Loading ."

[node name="Sprite" type="Sprite" parent="Control/Kings Dialouge"]
position = Vector2( -81, 78.7123 )
scale = Vector2( 0.383881, 0.383881 )
texture = ExtResource( 3 )

[node name="Player Dialouge" type="PopupDialog" parent="Control"]
visible = true
margin_left = 546.0
margin_top = 249.0
margin_right = 855.0
margin_bottom = 401.0
rect_scale = Vector2( 1, 0.978246 )
custom_styles/panel = SubResource( 2 )

[node name="chatBoxPlayer" type="Sprite" parent="Control/Player Dialouge"]
position = Vector2( 118, 69.907 )
scale = Vector2( 0.2, 0.232804 )
texture = ExtResource( 4 )

[node name="Name" type="RichTextLabel" parent="Control/Player Dialouge"]
margin_left = 56.0
margin_top = 11.0
margin_right = 290.0
margin_bottom = 59.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 9 )
text = "		        : Player"

[node name="Message" type="RichTextLabel" parent="Control/Player Dialouge"]
margin_left = -67.0
margin_top = 46.0
margin_right = 272.0
margin_bottom = 87.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 6 )
text = "..."

[node name="Sprite2" type="Sprite" parent="Control/Player Dialouge"]
position = Vector2( 385, 77.6901 )
scale = Vector2( 0.374277, 0.374277 )
texture = ExtResource( 2 )
flip_h = true

[node name="MenuButton" type="MenuButton" parent="Control"]
margin_left = 411.0
margin_top = 442.0
margin_right = 566.0
margin_bottom = 512.0
theme = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_constants/hseparation = 2
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Tell A joke"
flat = false
expand_icon = true

[node name="Top Bar" type="ColorRect" parent="."]
margin_right = 1020.0
margin_bottom = 78.0

[node name="Timer2" type="Timer" parent="Top Bar"]

[node name="Timer Label" type="Label" parent="Top Bar"]
margin_left = 410.0
margin_top = 373.0
margin_right = 519.0
margin_bottom = 402.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Time Left"

[node name="Timer" type="Label" parent="Top Bar"]
margin_left = 538.0
margin_top = 373.0
margin_right = 598.0
margin_bottom = 402.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "120"

[node name="Chances" type="Label" parent="Top Bar"]
margin_left = 749.0
margin_top = 37.0
margin_right = 903.0
margin_bottom = 66.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Chances Left"

[node name="Heart" type="Sprite" parent="Top Bar"]
position = Vector2( 943, 51 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="Player Score" type="Label" parent="Top Bar"]
margin_left = 40.0
margin_top = 35.0
margin_right = 100.0
margin_bottom = 60.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 9 )
text = "Score"

[node name="Score" type="Label" parent="Top Bar"]
margin_left = 153.0
margin_top = 35.0
margin_right = 218.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 9 )
text = "0"

[node name="Restart with connection" type="ColorRect" parent="."]
margin_left = 241.0
margin_top = 207.0
margin_right = 760.0
margin_bottom = 532.0
color = Color( 0.341176, 0.0784314, 0.0784314, 0.737255 )

[node name="Error" type="Label" parent="Restart with connection"]
margin_left = 9.0
margin_top = 51.0
margin_right = 509.0
margin_bottom = 124.0
custom_colors/font_color = Color( 0.937255, 0.0509804, 0.0509804, 1 )
custom_colors/font_outline_modulate = Color( 0.65098, 0.65098, 0.65098, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "Internet Connection Required.
Connect To The Internet And Restart."
align = 1

[node name="exit" type="Button" parent="Restart with connection"]
margin_left = 155.0
margin_top = 159.0
margin_right = 342.0
margin_bottom = 248.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
text = "MAIN"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Kings Laugh" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 175, 89 )
scale = Vector2( 1, 0.978246 )
stream = ExtResource( 15 )
volume_db = 8.0

[node name="End" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )

[node name="Background Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = 8.0
autoplay = true

[node name="Kings Disapointed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )

[node name="Start Button" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = 8.0

[connection signal="timeout" from="Top Bar/Timer2" to="." method="game_over"]
[connection signal="pressed" from="Restart with connection/exit" to="." method="_on_exit_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
